feat(server): check a resource's representation and serve $validate
